crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@421.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_match('{}', 'strict $.a', silent => false);"
---
SelectStmt@0..61
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..59
    FuncCall@7..59
      Ident@7..23 "jsonb_path_match"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'{}'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..42
        Sconst@30..42 "'strict $.a'"
      Ascii44@42..43 ","
      Whitespace@43..44 " "
      NamedArgExpr@44..59
        Ident@44..50 "silent"
        Whitespace@50..51 " "
        EqualsGreater@51..53 "=>"
        Whitespace@53..54 " "
        AConst@54..59
          FalseP@54..59 "false"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

