crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@423.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_match('[true, true]', '$[*]', silent => false);"
---
SelectStmt@0..65
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..63
    FuncCall@7..63
      Ident@7..23 "jsonb_path_match"
      Ascii40@23..24 "("
      AConst@24..38
        Sconst@24..38 "'[true, true]'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..46
        Sconst@40..46 "'$[*]'"
      Ascii44@46..47 ","
      Whitespace@47..48 " "
      NamedArgExpr@48..63
        Ident@48..54 "silent"
        Whitespace@54..55 " "
        EqualsGreater@55..57 "=>"
        Whitespace@57..58 " "
        AConst@58..63
          FalseP@58..63 "false"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

