crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@425.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb '[{\"a\": 1}, {\"a\": 2}]' @@ '$[*].a > 2';"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..51
      TypeCast@13..35
        AConst@13..35
          Sconst@13..35 "'[{\"a\": 1}, {\"a\": 2}]'"
      Whitespace@35..36 " "
      Op@36..38 "@@"
      Whitespace@38..39 " "
      AConst@39..51
        Sconst@39..51 "'$[*].a > 2'"
  Ascii59@51..52 ";"

