crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_exists('[{\"a\": 1}, {\"a\": 2}, 3]', 'strict $[*].a', silent => false);"
---
SelectStmt@0..86
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..84
    FuncCall@7..84
      Ident@7..24 "jsonb_path_exists"
      Ascii40@24..25 "("
      AConst@25..50
        Sconst@25..50 "'[{\"a\": 1}, {\"a\": 2}, ..."
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      AConst@52..67
        Sconst@52..67 "'strict $[*].a'"
      Ascii44@67..68 ","
      Whitespace@68..69 " "
      NamedArgExpr@69..84
        Ident@69..75 "silent"
        Whitespace@75..76 " "
        EqualsGreater@76..78 "=>"
        Whitespace@78..79 " "
        AConst@79..84
          FalseP@79..84 "false"
  Ascii41@84..85 ")"
  Ascii59@85..86 ";"

