crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@46.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('1', 'strict $.a');"
---
SelectStmt@0..43
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'1'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..41
        Sconst@29..41 "'strict $.a'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

